feat: adding csrf security on reservation

--- a/templates/Cookies/cookies.html.twig
+++ b/templates/Cookies/cookies.html.twig
@@ -12,7 +12,7 @@
 				<p class="py-2">
 					Certaines fonctionnalités de ce site reposent sur l'usage de cookies.
 				</p>
-				<p>Le bandeau cookies ne s'affiche pas sur la page d'accueil lors de votre navigation car seuls des cookies nécessaires au fonctionnement du site sont déposé.</p>
+				<p>Le bandeau cookies ne s'affiche pas sur la page d'accueil lors de votre navigation car seuls des cookies nécessaires au fonctionnement du site sont déposés.</p>
 			</div>
             
 			<a href="{{ path('home') }}" class="card_backLink"><i class="fa-solid fa-arrow-left px-2"></i>Revenir à l'accueil</a>
