--- a/templates/Reservation/user/reservation.user.html.twig
+++ b/templates/Reservation/user/reservation.user.html.twig
@@ -186,6 +186,7 @@
 								</div>
 							</div>
 						</div>
+						<input type="hidden" name="token" value="{{ csrf_token('user-reservation') }}"/>
 					</form>
 					{% if not app.user %}
 						<div class="mt-8 py-4 max-w-[589px] w-11/12 mx-auto lg:mx-auto lg:w-5/6 font-secondary border border-solid border-400 flex flex-col gap-8 items-center">
